# KISS-multiplayer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
KISSMultiplayer/art/kissmp/font_indexes/: en-US.json
KISSMultiplayer/art/kissmp/translations/de_DE/: chat.json  download.json  main_window.json
KISSMultiplayer/art/kissmp/translations/en-US/: chat.json  download.json  main_window.json
KISSMultiplayer/lua/common/kissmp/: string_format.lua
KISSMultiplayer/lua/ge/extensions/: kissconfig.lua  kissghosts.lua  kissmods.lua  kissplayers.lua  kissrichpresence.lua  kisstransform.lua  kissui.lua  kissvoicechat.lua  network.lua  vehiclemanager.lua
KISSMultiplayer/lua/ge/extensions/kissmp/: config.lua  levelmanager.lua  main.lua  mods.lua  network.lua  players.lua  richpresence.lua  transform.lua  ui.lua  vehiclemanager.lua  version.lua  voicechat.lua
KISSMultiplayer/lua/vehicle/extensions/kiss_mp/: kiss_controllers.lua  kiss_couplers.lua  kiss_electrics.lua  kiss_gearbox.lua  kiss_transforms.lua  kiss_vehicle.lua
KISSMultiplayer/scripts/kiss_mp/: modScript.lua
KISSMultiplayer/settings/: kissmp_config_default.json
docs/src/: introduction.md
docs/src/srv_hosting/: mods_and_addons.md
kissmp-bridge/: Cargo.toml
kissmp-bridge/src/: discord.rs  http_proxy.rs  main.rs
kissmp-master/src/: main.rs
kissmp-server/: Cargo.toml
kissmp-server/src/: config.rs  events.rs  file_transfer.rs  lib.rs  lua.rs  server_vehicle.rs
shared/src/: lib.rs
shared/src/vehicle/: electrics.rs  gearbox.rs  mod.rs  vehicle_meta.rs
(+29 files in other folders)
