[package]
name = "kissmp-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
rand = "0.7.3"
serde_json="1.0"
bincode="1.3.1"
rmp="0.8.9"
rmp-serde="1.3"
futures = "0.3.13"
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
anyhow = "1.0.32"
rlua = "0.17.0"
notify = "4.0.15"
tokio-util = {version = "0.7", features = ["codec"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.2", default-features = false, features=["rustls-tls"] }
rcgen = { version = "0.8.2", default-features = false }
tokio = { version = "1.51", features = ["rt-multi-thread", "time", "macros", "sync", "io-util", "io-std", "fs"] }
tokio-stream = "0.1.18"
dirs = "3.0"
igd = { package = "igd-next", version = "0.14" }
ifcfg = "0.1.2"
async-ctrlc = "1.2"
ipnetwork = "0.18"
log = "0.4"

[target.'cfg(unix)'.dependencies]
steamlocate = "1.0"
